fix: Remove custom margin-left from .w-12 class
- Remove margin-left: 30px from .w-12 utility class in index.css
- This was causing icons to be pushed to the right
- .w-12 should only set width: 3rem, not add margins
- Icons now properly left-aligned without extra spacing

--- a/src/index.css
+++ b/src/index.css
@@ -171,7 +171,6 @@ All colors MUST be HSL.
 @layer utilities {
   .w-12 {
     width: 3rem;
-    margin-left: 30px;
   }
   
   .py-4 {
